tests/negative/prefixed-assign.toit
// Copyright (C) 2018 Toitware ApS.
// Use of this source code is governed by a Zero-Clause BSD license that can
// be found in the tests/LICENSE file.

import math as prefix

class A:
  foo:
    return "foo"

final-global ::= 42

some-method:
  return 499

x := 0
